language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_basic_multiple.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\npub fn main() {\n  option.Some(1)\n  option.Some(1)\n  todo\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
  option.Some(1)
  todo
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
  Some(1)
  Some(1)
  todo
}
