language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_between_constructors.snap
---
source: language-server/src/tests/action.rs
expression: "\n\npub fn main() {\n  option.Some(1)\n}\n\nimport option\n\npub fn identity(x: option.Option(Int)) -> option.Option(Int) {\n    option.Some(1)\n    x\n}\n"
---
----- BEFORE ACTION


pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}

import option

pub fn identity(x: option.Option(Int)) -> option.Option(Int) {
    option.Some(1)
    x
}


----- AFTER ACTION


pub fn main() {
  Some(1)
}

import option.{Some}

pub fn identity(x: option.Option(Int)) -> option.Option(Int) {
    Some(1)
    x
}
