language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_constant_multiple_occurrences.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\nconst a = option.None\nconst b = option.Some(option.None)\n"
---
----- BEFORE ACTION

import option

const a = option.None
                 ↑   
const b = option.Some(option.None)


----- AFTER ACTION

import option.{None}

const a = None
const b = option.Some(None)
