language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_constructor_complex_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\npub fn main() {\n    case [option.Some(1), option.None] {\n        [option.None, ..] -> todo\n        [option.Some(_), ..] -> todo\n        _ -> todo\n    }\n    case option.Some(1), option.Some(2) {\n        option.None, option.Some(_) -> todo\n        option.Some(_), option.Some(val) -> todo\n        _ -> todo\n    }\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() {
    case [option.Some(1), option.None] {
          ▔▔▔▔▔▔▔↑                      
        [option.None, ..] -> todo
        [option.Some(_), ..] -> todo
        _ -> todo
    }
    case option.Some(1), option.Some(2) {
        option.None, option.Some(_) -> todo
        option.Some(_), option.Some(val) -> todo
        _ -> todo
    }
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
    case [Some(1), option.None] {
        [option.None, ..] -> todo
        [Some(_), ..] -> todo
        _ -> todo
    }
    case Some(1), Some(2) {
        option.None, Some(_) -> todo
        Some(_), Some(val) -> todo
        _ -> todo
    }
}
