language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_constructor_different_module_same_name_inner.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\nimport opt\n\npub fn main() {\n    option.Some(opt.Some(1))\n    todo\n}\n"
---
----- BEFORE ACTION

import option
import opt

pub fn main() {
    option.Some(opt.Some(1))
                ▔▔▔▔▔▔▔▔↑   
    todo
}


----- AFTER ACTION

import option
import opt.{Some}

pub fn main() {
    option.Some(Some(1))
    todo
}
